@startuml client-coordinator-network
title Client — ClientApp, AppCoordinator & Network transports (org.adsl.client, org.adsl.client.network)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "client" {

  class ClientApp <<utility>> {
    -ClientApp()
    {static} +main(args: String[]): void
    {static} -startTestTui(): void
    {static} -startTestGui(): void
    {static} -startClientTester(): void
    {static} -startClient(connectionType: String, uiType: String, ipAddress: String, port: int): void
    {static} -printUsageAndExit(errorMessage: String): void
  }
  note right of ClientApp
    Modes: --client <socket|rmi> <tui|gui> <ip> <port>,
    --test-tui, --test-gui, --test-server-connection.
    Wires GameUI + ServerConnection + AppCoordinator.
    Adds shutdown hook → gameUI.shutdown + disconnect.
  end note

  class AppCoordinator <<ResponseVisitor>> {
    {static} -DISPATCH_MIN_DELAY_MS: long = 1200L
    -gameUI: GameUI
    -serverConnection: ServerConnection
    -pingScheduler: ScheduledExecutorService
    -dispatchPacer: ScheduledExecutorService
    -lastServerPing: long <<volatile>>
    -lastIp: String
    -lastPort: int
    -lastPingRatioMs: int
    -lastServerTimeoutMs: long
    -pacerLock: Object
    -nextDispatchAtMs: long
    -disconnected: AtomicBoolean
    +AppCoordinator(gameUI: GameUI, serverConnection: ServerConnection)
    +setConnectionParams(ip: String, port: int): void
    +startPingScheduler(pingRatioMs: int, serverTimeoutMs: long): void
    +stopPingScheduler(): void
    +requestShutdown(): void
    +handleServerResponse(response: ServerResponse): void
    -dispatchResponse(response: ServerResponse): void
    +visit(response: ServerPing): void
    +visit(response: LoginNeeded): void
    +visit(response: HomeUpdate): void
    +visit(response: LobbyUpdate): void
    +visit(response: TotemAvailableUpdate): void
    +visit(response: GameUpdate): void
    +visit(response: GameEnded): void
    +visit(response: ErrorResponse): void
    +visit(response: ServerDisconnected): void
    +visit(response: EventsTriggered): void
    +reconnect(): void
    +connectRequest(): void
    +createLoginRequest(username: String): void
    +createLogoutRequest(): void
    +createExitLobbyRequest(): void
    +createGameRequest(numPlayer: int): void
    +enterGameRequest(gameId: int): void
    +startGameRequest(): void
    +createTotemPickingRequest(totem: Totem): void
    +makeMoveRequest(moves: Set<Move>): void
    +disconnect(): void
    +createExitGameRequest(): void
  }
  note right of AppCoordinator
    Mediator: Network ↔ View.
    Dispatch pacer (≥1.2s spacing) on UI-bound
    responses; heartbeats bypass. Ping scheduler
    triggers onServerDisconnected on timeout
    or first RMI ConnectException.
    disconnect() idempotent (AtomicBoolean).
  end note
}

package "client.network" {

  interface ServerConnection {
    +connect(ip: String, port: int): void
    +sendRequest(clientRequest: ClientRequest): void
    +disconnect(): void
    +setAppCoordinator(appCoordinator: AppCoordinator): void
  }
}

package "client.network.socket" {
  class SocketClientConnection {
    -socket: Socket
    -out: PrintWriter
    -in: BufferedReader
    -appCoordinator: AppCoordinator
    -isRunning: boolean <<volatile>>
    +connect(ip: String, port: int): void
    -listenToServer(): void
    +sendRequest(request: ClientRequest): void
    +disconnect(): void
    -terminateResources(): void
    +setAppCoordinator(appCoordinator: AppCoordinator): void
  }
  note right of SocketClientConnection
    Daemon listener thread reads newline-delimited JSON.
    Graceful FIN (readLine→null) while running →
    synthesises ServerDisconnected so UI reacts
    without waiting for ping timeout (RMI parity).
  end note
}

package "client.network.rmi" {

  class RMIServerConnection {
    -serverStub: RemoteServerService
    -clientStub: RemoteClientStubImpl
    -appCoordinator: AppCoordinator
    -disconnected: boolean
    +connect(ip: String, port: int): void
    +sendRequest(request: ClientRequest): void
    +disconnect(): void {synchronized}
    +setAppCoordinator(appCoordinator: AppCoordinator): void
  }

  class RemoteClientStubImpl <<UnicastRemoteObject>> {
    -coordinator: AppCoordinator <<transient>>
    -threadPool: ExecutorService
    +RemoteClientStubImpl(coordinator: AppCoordinator)
    +sendResponse(response: ServerResponse): void
    +shutdown(): void
  }
}

package "client.network.fake" {

  class FakeServerConnection {
    -appCoordinator: AppCoordinator
    -username: String = "player"
    -numPlayers: int = 2
    -snapshot: GameDTO
    +connect(ip: String, port: int): void
    +disconnect(): void
    +setAppCoordinator(appCoordinator: AppCoordinator): void
    +sendRequest(request: ClientRequest): void
    -buildSnapshot(): GameDTO
    -resendSnapshot(): GameDTO
  }
  note right of FakeServerConnection
    In-process stub for --test-tui / --test-gui.
    Replies with canned responses; MoveRequest
    re-emits same snapshot with fresh reference.
  end note
}

SocketClientConnection ..|> ServerConnection
RMIServerConnection ..|> ServerConnection
FakeServerConnection ..|> ServerConnection

AppCoordinator ..|> "shared.network.responses.ResponseVisitor"
AppCoordinator --> "1" ServerConnection
AppCoordinator --> "1" "client.view.GameUI"

RemoteClientStubImpl ..|> "shared.network.remote.RemoteClientStub"
RMIServerConnection --> "1" RemoteClientStubImpl
RMIServerConnection ..> "shared.network.remote.RemoteServerService"
RemoteClientStubImpl --> "1" AppCoordinator

SocketClientConnection ..> "shared.network.JsonMessageHandler"

ClientApp ..> AppCoordinator
ClientApp ..> "client.view.tui.TUI"
ClientApp ..> "client.view.gui.GUI"
ClientApp ..> SocketClientConnection
ClientApp ..> RMIServerConnection
ClientApp ..> FakeServerConnection

@enduml
